# mcp_tool_vision

./: .gitignore  README.md  pyproject.toml
src/mcp_tool_vision/: __init__.py  cli.py  client.py  payload.py  prompts.py
